--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,29 @@
 </div>
 
 
-<h1 style="text-align: center; vertical-align:middle">Сайт для реги</h1>
+<h1 style="text-align: center; vertical-align: middle;">Здесь могло бы быть наше название</h1>
+<p><em><span
+        style="text-decoration: underline;">Кто мы?</span><br />
+</em>
+</p>
+<p><em>Пока не знаем, но здесь могло бы быть ваше описание. Хочешь к нам? Скорее регистрируйся&nbsp;&darr;</em></p>
+<p>&nbsp;</p>
+
+
+<button class="regbtn" id="Registration">Регистрация</button>
+<div class="Registration"></div>
+<br />
+
+<div class="dropdown">
+    <button class="sec1" id="Section1">Секция 1</button>
+    <div class="sec1dropdown">
+        <p>Описание</p>
+    </div>
+</div>
+
+<button class="sec2" id="Section2">Секция 2</button>
+
+<button class="sec3" id="Section3">Секция 3</button>
 
 </body>
 </html>
