--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,19 @@
 
 
 
-<button class="rightbtn" id="Reg" onclick="openForm()">Войти</button>
+<button class="rightbtn" id="Enter" >Войти</button>
 <div class="form-popup" id="regForm">
     <form class="form-container" method="POST" action="/register">
+
+        <label for="pswd"><b>Имя</b></label>
+        <input type="text" placeholder="Введите ваше имя" name="name" required>
+
         <label for="email"><b>Email</b></label>
         <input type="email" placeholder="Введите email" name="email" required>
  
         <label for="pswd"><b>Пароль</b></label>
         <input type="password" placeholder="Введите пароль" name="pswd" required>
+
 
         <button type="submit" class="subbtn">Войти</button>
         <button type="button" class="btnclose" onclick="closeForm()">Закрыть</button>
@@ -32,7 +37,7 @@
 <p>&nbsp;</p>
 
 
-<button class="regbtn" id="Registration">Регистрация</button>
+<button class="regbtn" id="Registration" onclick="openForm()">Регистрация</button>
 <div class="Registration"></div>
 <br />
 
