Добавление пользователя после регистрации

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,14 @@
 <div class="form-popup" id="regForm">
     <form class="form-container" method="POST" action="/register">
 
-        <label for="pswd"><b>Имя</b></label>
+        <label for="name"><b>Имя</b></label>
         <input type="text" placeholder="Введите ваше имя" name="name" required>
 
         <label for="email"><b>Email</b></label>
         <input type="email" placeholder="Введите email" name="email" required>
  
-        <label for="pswd"><b>Пароль</b></label>
-        <input type="password" placeholder="Введите пароль" name="pswd" required>
+        <label for="password"><b>Пароль</b></label>
+        <input type="password" placeholder="Введите пароль" name="password" required>
 
 
         <button type="submit" class="subbtn">Войти</button>
