--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -25,7 +25,7 @@
 }
 
 
-.form-container input[type=text], .form-container input[type=password] {
+.form-container input[type=text], .form-container input[type=password], .form-container input[type=email] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
