Добавлена проверка совпадения хэша введённого пароля и пароля из базы, несколько реорганизован код

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,11 @@
         <label for="email"><b>Email</b></label>
         <input type="email" placeholder="Введите email" name="email" id="email" required>
 
-        <p id="error"></p>
+        <p id="NotInDatabase"></p>
 
         <label for="password"><b>Пароль</b></label>
         <input type="password" placeholder="Введите пароль" name="password" id="password" required>
+        <p id="UnmatchedPasswords"></p>
 
 
         <button type="submit" class="subbtn">Войти</button>
