--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -44,7 +44,9 @@
 
 .form-container input[type=text], 
 .form-container input[type=password], 
-.form-container input[type=email] {
+.form-container input[type=email],
+.form-container input[type=description],
+.form-container input[type=counter] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -56,7 +58,9 @@
 
 .form-container input[type=text]:focus, 
 .form-container input[type=password]:focus,
-.form-container input[type=email]:focus {
+.form-container input[type=email]:focus,
+.form-container input[type=description]:focus,
+.form-container input[type=counter]:focus{
   background-color: #ddd;
   outline: none;
 }
