Добавлена проверка, не позволяющая зарегестрироваться дважды на одну почту

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,13 +30,15 @@
     <form id=regForm class="form-container" method="POST" action="/register">
 
         <label for="name"><b>Имя</b></label>
-        <input type="text" placeholder="Введите ваше имя" name="name" required>
+        <input type="text" placeholder="Введите ваше имя" name="name" id="name" required>
 
         <label for="email"><b>Email</b></label>
-        <input type="email" placeholder="Введите email" name="email" required>
+        <input type="email" placeholder="Введите email" name="email" id="regEmail" required>
+
+        <p id="InDatabase"></p>
 
         <label for="password"><b>Пароль</b></label>
-        <input type="password" placeholder="Введите пароль" name="password" required>
+        <input type="password" placeholder="Введите пароль" name="password" id="regPassword"required>
 
 
         <button type="submit" class="subbtn">Зарегистрироваться</button>
