Добавлена очистка форм при закрытии, несколько более структурирован код

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <form id=regForm class="form-container" method="POST" action="/register">
 
         <label for="name"><b>Имя</b></label>
-        <input type="text" placeholder="Введите ваше имя" name="name" id="name" required>
+        <input type="text" placeholder="Введите ваше имя" name="name" id="regName" required>
 
         <label for="email"><b>Email</b></label>
         <input type="email" placeholder="Введите email" name="email" id="regEmail" required>
