Добавлена кнопка выхода, при входе кнопки регистрации и входа пропадают, а при выходе появляются

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,17 +10,6 @@
     text-align: center;
 }
 
-/* кнопка входа */
-.signin-btn{
-    top:5px;
-    right:5px;
-    width:200;
-    height:100;
-    border: none;
-    position: fixed;
-    cursor: pointer;
-    transition: background 0.2s;
-}
 
 .signin-btn:hover {
     background-color: #d95c5c;
@@ -106,6 +95,40 @@ transition: background 0.2s;
 
 .regbtn:hover {
     background-color: #d95c5c;
+}
+
+/* кнопка входа */
+.signin-btn{
+display: block;
+height: 40;
+width: 120;
+padding: 10px 10px;
+background-color: #F77E7E;
+color: white;
+text-decoration: none;
+border-radius: 4px;
+border: none;
+font-family: Arial, sans-serif;
+font-size: 16px;
+cursor: pointer;
+transition: background 0.2s;
+}
+
+/* кнопка выхода */
+.exitbtn{
+display: none;
+height: 40;
+width: 120;
+padding: 10px 10px;
+background-color: #F77E7E;
+color: white;
+text-decoration: none;
+border-radius: 4px;
+border: none;
+font-family: Arial, sans-serif;
+font-size: 16px;
+cursor: pointer;
+transition: background 0.2s;
 }
 
 
