--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 
 
 <button class="signin-btn" id="Enter">Войти</button>
+<button class="exitbtn" id="exitBtn">Выйти</button>
 
 <div class="form-popup" id=EnterForm>
     <form class="form-container" method="POST" id="enterForm">
