--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,31 @@
 {box-sizing: border-box}
 
+/* шапка сайта */
+.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: #F77E7E;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    font-size: 20px;
+    z-index: 1000;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    padding: 0 32px;
+    flex-wrap: wrap; 
+    box-sizing: border-box;
+}
+
+.fixed-btn {
+    position: fixed;
+    top: 70px; /* ниже высоты .fixed-header */
+    right: 25px; 
+    z-index: 1001; 
+}
 
 .center-container {
     display: flex;
