--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 <body>
 
 
-<button class="signin-btn" id="Enter">Войти</button>
-<button class="exitbtn" id="exitBtn">Выйти</button>
+<button class="funcbtn" id="Enter">Войти</button>
+<button class="funcbtn" id="exitBtn" style="display: none" >Выйти</button>
 
 <div class="form-popup" id=EnterForm>
     <form class="form-container" method="POST" id="enterForm">
@@ -47,7 +47,7 @@
     </form>
 </div>
 
-<button class="regbtn" id="createSection">Создать</button>
+<button class="funcbtn" id="createSection">Создать</button>
 
 <div class="form-popup" id="CreateSectionForm">
     <form id=createSectionForm class="form-container" method="POST" action="/createSection">
