--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,15 @@
 {box-sizing: border-box}
 
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+body {
+    padding-top: 60px; 
+}
+
 /* шапка сайта */
 .fixed-header {
     position: fixed;
@@ -18,6 +28,18 @@
     padding: 0 32px;
     flex-wrap: wrap; 
     box-sizing: border-box;
+}
+
+.header-title {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.header-buttons {
+    display: flex;
+    gap: 12px;
 }
 
 .fixed-btn {
@@ -167,6 +189,11 @@ transition: background 0.2s;
     margin: 20px 0;
 }
 
+#sections.section-row {
+    margin-top: 100vh; 
+}
+
+
 /* кнопки секций */
 .section-btn {
     display: inline-block;
@@ -186,6 +213,23 @@ transition: background 0.2s;
 
 .section-btn:hover {
     background-color: #d95c5c;
+}
+
+
+
+.to-sections-btn {
+    background: #F77E7E;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 16px;
+    transition: background 0.2s;
+}
+.to-sections-btn:hover {
+    background: #d95c5c;
 }
 
 /* выкидной текст */
