--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,13 @@
 
 <!-- плашка (шапка) сверху сайта -->
 <div class="fixed-header">
-    <span>Добро пожаловать на сайт!</span>
-    <button class="signin-btn" id="Enter">Войти</button>
-    <button class="exitbtn" id="exitBtn">Выйти</button>
-    
-</div>  
+    <a href="/" class="header-title">Добро пожаловать на сайт!</a>
+    <div class="header-buttons">
+        <button class="to-sections-btn" id="toSectionsBtn">К секциям</button>
+        <button class="signin-btn" id="Enter">Войти</button>
+        <button class="exitbtn" id="exitBtn">Выйти</button>
+    </div>
+</div>
 
 <button class="regbtn fixed-btn" id="createSection">Создать</button>
 
@@ -75,6 +77,7 @@
     </form>
 </div>
 
+
 <!--главная часть страницы -->
 
 <div class="center-container">
@@ -93,33 +96,34 @@
     <button class="regbtn" id="Registration">Регистрация</button>
 
     <br />
-    
-    <!-- кнопки секций -->
-    <div class="section-row">
-        <div class="dropdown">
-            <button class="section-btn dropdown-btn">Секция 1</button>
-            <div class="dropdown-content">
-                <p>Описание 1</p>
-                <button class="section-btn">Записаться</button>
-            </div>
-        </div>
 
-        <div class="dropdown">
-            <button class="section-btn dropdown-btn">Секция 2</button>
-            <div class="dropdown-content">
-                <p>Описание 2</p>
-                <button class="section-btn">Записаться</button>
-            </div>
-        </div>
+</div>
 
-        <div class="dropdown">
-            <button class="section-btn dropdown-btn">Секция 3</button>
-            <div class="dropdown-content">
-                <p>Описание 3</p>
-                <button class="section-btn">Записаться</button>
-            </div>
-        </div>
 
+<!-- кнопки секций -->
+<div id="sections" class="section-row">
+    <div class="dropdown">
+        <button class="section-btn dropdown-btn">Секция 1</button>
+        <div class="dropdown-content">
+            <p>Описание 1</p>
+            <button class="section-btn">Записаться</button>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="section-btn dropdown-btn">Секция 2</button>
+        <div class="dropdown-content">
+            <p>Описание 2</p>
+            <button class="section-btn">Записаться</button>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="section-btn dropdown-btn">Секция 3</button>
+        <div class="dropdown-content">
+            <p>Описание 3</p>
+            <button class="section-btn">Записаться</button>
+        </div>
     </div>
 
 </div>
