--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
     <p>&nbsp;</p>
 
 
-    <button class="regbtn" id="Registration">Регистрация</button>
+    <button class="funcbtn" id="Registration">Регистрация</button>
 
     <br />
     
