Переделана часть с кнопками к секциям

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
 <!--главная часть страницы -->
 
 <div class="center-container">
-    <h1 style="text-align: center; vertical-align: middle;">Здесь могло бы быть наше название</h1>
+    <h1 style="text-align: center; vertical-align: middle">Здесь могло бы быть наше название</h1>
 
     <p>
         <em>
