--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -50,6 +50,8 @@ body {
 }
 
 .center-container {
+    margin-top: -60px;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -190,9 +192,12 @@ transition: background 0.2s;
 }
 
 #sections.section-row {
-    margin-top: 100vh; 
+    min-height: 100vh;
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
 }
-
 
 /* кнопки секций */
 .section-btn {
