--- a/templates/index.html
+++ b/templates/index.html
@@ -96,10 +96,15 @@
     <button class="funcbtn" id="Registration">Регистрация</button>
 
     <br />
+
+
+</div>
+
+
     
     <!-- кнопки секций -->
 
-<div class="cards-container">
+<div id="sections" class="cards-container">
     {% for item in data %}
     <div class="card">
         <button class="section-btn dropdown-btn">{{ item.name }}</button>
@@ -119,7 +124,7 @@
 </div>
 
 
-</div>
+
 
 
 <script src="{{url_for('static', filename='js/sc.js')}}"></script>
