--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,9 @@
     </div>
 </div>
 
-<button class="regbtn fixed-btn" id="createSection">Создать</button>
+{% if is_admin %}
+<button class="funcbtn fixed-btn" id="createSection">Создать</button>
+{% endif %}
 
 
 
