Изменение структуры прооекта, для того, чтобы картинки корректно отображались

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <a href="/" class="header-title">Добро пожаловать на сайт!</a>
     <div class="header-buttons">
         <button class="to-sections-btn" id="toSectionsBtn">К секциям</button>
-        <img src="profile.svg" alt="Иконка профиля">
+        <img src="/static/images/profile.svg" alt="Иконка профиля">
         <button class="funcbtn" id="Enter">Войти</button>
         <button class="funcbtn" id="exitBtn" style="display: none" >Выйти</button>
     </div>
