Добавление возможности для админа выгрузить данные базы в виде .xlsx файла

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,10 @@
 </div>
 
 {% if is_admin %}
-<button class="funcbtn fixed-btn" id="createSection">Создать</button>
+    <button class="funcbtn fixed-btn" id="createSection">Создать</button>
+    <a href="/download">
+        <button>Скачать таблицу участников</button>
+    </a>
 {% endif %}
 
 
