Изменена шапка, выровнены кнопки

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,9 @@
     <a href="/" class="header-title">Добро пожаловать на сайт!</a>
     <div class="header-buttons">
         <button class="to-sections-btn" id="toSectionsBtn">К секциям</button>
-        <img src="/static/images/profile.svg" alt="Иконка профиля">
+        <button class="header-buttons profile-btn" onclick="window.location.href='/account'">
+            <img src="/static/images/profile.svg" alt="Иконка профиля" class="profile-icon">
+        </button>
         <button class="funcbtn" id="Enter">Войти</button>
         <button class="funcbtn" id="exitBtn" style="display: none" >Выйти</button>
     </div>
