--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,6 +46,18 @@ body {
     gap: 12px;
 }
 
+.profile-icon {
+    width: 40px;
+    height: 40px;
+}
+
+.profile-btn {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
 .fixed-btn {
     position: fixed;
     top: 70px; /* ниже высоты .fixed-header */
