--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -153,10 +153,10 @@ color: white;
 text-decoration: none;
 border-radius: 4px;
 border: none;
-font-family: Arial, sans-serif;
 font-size: 16px;
 cursor: pointer;
 transition: background 0.2s;
+font-weight: bold;
 }
 
 .regbtn:hover {
@@ -174,7 +174,6 @@ transition: background 0.2s;
     color: white;
     text-decoration: none;
     border-radius: 4px;
-    font-family: Arial, sans-serif;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -185,7 +184,15 @@ transition: background 0.2s;
     background-color: #d95c5c;
 }
 
-
+.funcbtn {
+    background: #F77E7E;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.funcbtn:hover {
+    background: #d95c5c;
+}
 
 .to-sections-btn {
     background: #F77E7E;
