--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-{% if is_admin %}
+{% if is_authenticated and is_admin %}
     <button class="funcbtn fixed-btn" id="createSection">Создать</button>
     <a href="/download">
         <button>Скачать таблицу участников</button>
@@ -133,7 +133,7 @@
 </div>
 
 
-
+<p>is_authenticated: {{ is_authenticated }}, is_admin: {{ is_admin }}</p>
 
 
 <script src="{{url_for('static', filename='js/sc.js')}}"></script>
