--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/profile_style.css') }}">
+{% endblock %}
+
 {% block content %}
     <div class="account-card">
         <div class="account-header">
