добавила svg для секций

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,7 @@
     <a href="/" class="header-title">Добро пожаловать на сайт!</a>
     <div class="header-buttons">
         <button class="to-sections-btn" id="toSectionsBtn">К секциям</button>
-        <button class="header-buttons profile-btn" onclick="window.location.href='/account'">
-            <img src="/static/images/profile.svg" alt="Иконка профиля" class="profile-icon">
-        </button>
-        <button class="funcbtn" id="Enter">Войти</button>
+        <button class="login-btn" onclick="window.location.href='/account'">Войти</button>
         <button class="funcbtn" id="exitBtn" style="display: none" >Выйти</button>
     </div>
 </div>
