--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -177,35 +177,58 @@ font-weight: bold;
     cursor: pointer;
     transition: background 0.2s;
 }
-
 .section-btn:hover {
     background-color: #d95c5c;
 }
 
-.funcbtn {
-    background: #F77E7E;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-}
-.funcbtn:hover {
-    background: #d95c5c;
-}
-
+/* кнопка к секциям */
 .to-sections-btn {
     background: url('/static/images/tosections.svg') no-repeat;
-    background-size: 40px 40px;
+    background-size: 60px 60px;
+    background-position: 0px -12px;
+    text-indent: 40px;
     color: white;
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
-    margin-left: 16px;
+    height: 50px;
+    width: 160px;
+    margin-left: 8px;
     transition: background 0.2s;
 }
 .to-sections-btn:hover {
     background: #d95c5c;
+    background: url('/static/images/tosections.svg') no-repeat;
+    background-size: 60px 60px;
+    background-position: 0px -12px;
+    background-color: #d95c5c;
+}
+
+/* кнопка войти в шапке */
+.login-btn {
+    background: url('/static/images/profile.svg') no-repeat;
+    background-size: 60px 60px;
+    background-position: -10px -11px;
+    display: inline-block;
+    text-indent: 30px;
+    height: 50px;
+    width: 140px;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+.login-btn:hover {
+    background: url('/static/images/profile.svg') no-repeat;
+    background-size: 60px 60px;
+    background-position: -10px -11px;
+    background-color: #d95c5c;
 }
 
 /* выкидной текст */
