Переделаны кнопки шапки, выравнены

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
 </div>
 
 {% if is_authenticated and is_admin %}
-    <button class="funcbtn fixed-btn" id="createSection">Создать</button>
+    <button class="funcbtn fixed-btn-right" id="createSection">Создать</button>
     <a href="/download">
-        <button>Скачать таблицу участников</button>
+        <button class="fixed-btn-left">Скачать таблицу участников</button>
     </a>
 {% endif %}
 
