--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,9 +43,7 @@ body {
 
 .header-buttons {
     display: flex;
-    align-items: center;
-    gap: 32px;
-    height: 60px;
+    gap: 12px;
 }
 
 .profile-icon {
@@ -60,12 +58,20 @@ body {
     cursor: pointer;
 }
 
-.fixed-btn {
+.fixed-btn-right {
     position: fixed;
-    top: 70px; /* ниже высоты .fixed-header */
-    right: 25px; 
+    top: 70px; /* ниже высоты .fixed-header */ 
+    right: 25px;
     z-index: 1001; 
 }
+
+.fixed-btn-left {
+    position: fixed;
+    top: 70px; /* ниже высоты .fixed-header */ 
+    left: 25px;
+    z-index: 1001; 
+}
+
 
 .center-container {
     margin-top: -60px;
@@ -183,33 +189,23 @@ font-weight: bold;
     background-color: #d95c5c;
 }
 
-
-
-
-
-
-
-
 /* кнопка к секциям */
 .to-sections-btn {
-    background: url('/static/images/tosections.svg') no-repeat 10px center, #F77E7E;
-    background-size: 32px 32px;
+    background: url('/static/images/tosections.svg') no-repeat;
+    background-size: 60px 60px;
+    background-position: 0px -12px;
+    text-indent: 40px;
     color: white;
     border: none;
     border-radius: 4px;
+    padding: 10px 20px;
     font-size: 18px;
     cursor: pointer;
-    height: 40px;
-    min-width: 140px;
-    padding-left: 48px; /* место для иконки */
-    padding-right: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    box-sizing: border-box;
+    height: 50px;
+    width: 170px;
+    margin-left: 8px;
     transition: background 0.2s;
 }
-
 .to-sections-btn:hover {
     background: #d95c5c;
     background: url('/static/images/tosections.svg') no-repeat;
@@ -218,88 +214,48 @@ font-weight: bold;
     background-color: #d95c5c;
 }
 
-
 .account-btn {
-    background: url('/static/images/profile.svg') no-repeat center center, #F77E7E;
-    background-size: 32px 32px;
-    width: 40px;
-    height: 40px;
-    border: none;
+    background: url('/static/images/profile.svg') no-repeat;
+    background-size: 60px 60px;
+    background-position: -10px -11px;
+    display: inline-block;
+    text-indent: 30px;
+    height: 50px;
+    width: 50px;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
     border-radius: 4px;
+    font-size: 18px;
+    border: none;
     cursor: pointer;
-    padding: 0;
-    font-size: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
     transition: background 0.2s;
-}
-
-.account-btn:hover::after {
-    content: "Личный кабинет"; 
-    position: absolute;
-    left: 50%;
-    top: 110%;
-    transform: translateX(-50%);
-    background: #333;
-    color: #fff;
-    padding: 2px 2px;
-    border-radius: 6px;
-    white-space: nowrap;
-    font-size: 12px;
-    z-index: 9999;
-    opacity: 1;
-    pointer-events: none;
-}
-
-.account-btn::after {
-    content: "";
-    opacity: 0;
-    transition: opacity 0.2s;
 }
 
 /* кнопка войти в шапке */
 .login-btn {
     background: url('/static/images/profile.svg') no-repeat;
     background-size: 60px 60px;
-    height: 40px;
-    min-width: 100px;
-    border-radius: 4px;
-    border: none;
-    background: #F77E7E;
+    background-position: -10px -11px;
+    display: inline-block;
+    text-indent: 30px;
+    height: 50px;
+    width: 140px;
+    padding: 10px;
     color: white;
+    text-decoration: none;
+    border-radius: 4px;
     font-size: 18px;
+    border: none;
     cursor: pointer;
-    padding: 0 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
     transition: background 0.2s;
 }
-}
-
-
 .login-btn:hover {
     background: url('/static/images/profile.svg') no-repeat;
     background-size: 60px 60px;
     background-position: -10px -11px;
     background-color: #d95c5c;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* выкидной текст */
 .dropdown-content {
