Добавлено отображение секций, на которые записался пользователь

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
             </div>
             <form method="POST" action="/entryToSection">
                 <input type="hidden" name="name" value="{{ item.name }}">
-                <button type="submit" class="section-btn enroll-btn">Записаться</button>
+                <button type="submit" class="section-btn enroll-btn" action="/add-entry">Записаться</button>
             </form>
         </div>
     </div>
