--- a/templates/profile.html
+++ b/templates/profile.html
@@ -51,6 +51,7 @@
         <h2 class="account-title">Записи пользователя</h2>
 
         {% if entries %}
+            <script>console.log("a")</script>
             <table class="entries-table">
                 <thead>
                     <tr>
