Добавлена возможность отписаться от секции, переделано возвращение на главную страницу

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="account-card">
         <div class="account-header">
-            <button class="back-btn" onclick="history.back()">← Назад</button>
+            <button class="back-btn" onclick="window.location.href='/'">← Назад</button>
         </div>
 
         <h2 class="account-title">Данные пользователя</h2>
