Незначительные визуальные изменения

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 {% if is_authenticated and is_admin %}
     <button class="funcbtn fixed-btn-right" id="createSection">Создать</button>
     <a href="/download">
-        <button class="fixed-btn-left">Скачать таблицу участников</button>
+        <button class="funcbtn fixed-btn-left">Скачать таблицу участников</button>
     </a>
 {% endif %}
 
